--- a/eks-deploy-k8s.yaml
+++ b/eks-deploy-k8s.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: my-springboot-app
-        image: 150741279371.dkr.ecr.us-east-1.amazonaws.com/projectjenkins:latest
+        image: 211125403425.dkr.ecr.us-east-2.amazonaws.com/cloudgenius
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
